Nick added his reflection.

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -272,7 +272,16 @@ Conferenceware provided a very unique and educational experience personally and 
 \subsubsection{Brian Sawicki}
 Working on this project was very different than my previous software engineering experience.  While in my internships the previous two summers I have worked on teams of comparable size, this was my first time developing a serious application in an entirely windows environment, meaning there were a lot of technologies being used that I was unfamiliar with.  I came in with only minor web development experience, as much of my prior work is in distributed systems, and I'm several years removed from the experience I do have.  This was also only the second time I had ever developed anything using C\# as the primary language.  All this combined made working on this project a real learning experience for me, full of new and sometimes frustrating problems to solve.  Despite my internship experience had never had to do a lot of the things we needed to do for this project.  For instance, while I have written plenty of unit tests before, I had never been forced to write tests for anything using the MVC pattern before.  Thankfully many of the members of the team were quite knowledgeable and able to give me a hand with any technical problems I ran into.  In the end I feel it has been a very beneficial project to work on, and I have enjoyed watching as our final product took shape over time. In the end I don't feel like I will probably be doing a lot of windows based web development in the future, however having used the XP process while working on the project (in particular the documentation work we did and the use of the redmine reporting system for bugs/users stories/etc) will almost certainly be invaluable after I graduate and join the workforce.
 \subsubsection{Nick Tenczar}
-\textit{Add personal reflections here}
+For me, Conferenceware had its share of ups and downs. From initially creating 
+and populating the Microsoft SQL Server 2008 Express database to pushing and 
+pulling from the Git repository, I learned a great deal about technologies that 
+I have never used before. Some of these experiences, working with Git in 
+particular, leave me with no desire to use them in the future. Using Visual 
+Studio 2010, while the rest of the group used Visual Studio 2008, proved to be 
+difficult, but was desirable because of features that 2010 provided over 2008. 
+One particularly annoying aspect of using Visual Studio 2010 is that I could not 
+add new classes to the project because they would not be added to the C\# project 
+file for 2008.
 \subsubsection{Jim Wordelman}
 For me, this was not the first attempt at this project, but it was the first
 successful creation. I had been in charge of maintaining the Conference web site
