--- a/Conferenceware/Settings.resx
+++ b/Conferenceware/Settings.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="AttendeeBadgeBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\attendee.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -131,6 +131,7 @@
   </data>
   <data name="EventRegistrationConfirmationSubjectFormat" xml:space="preserve">
     <value>Event Registration Confirmation for {0}</value>
+    <comment>Subject of email format for event registration confirmations. It will take a parameter for name</comment>
   </data>
   <data name="FrontpageContent" xml:space="preserve">
     <value>This is the default frontpage data. What used to be here is now at &lt;a href="Home/Admin"&gt;/Admin&lt;/a&gt;</value>
