added annum to settings along with settings to allow timeslots outside of the conference times.
made timeslots check to  ensure datetimes made sense

as a side note, i think there might be a subtle problem with how times are being stored; i think we're pretending they are utc when they aren't. it's not a problem if we don't support localizing times exactly, but it is technically a consideration

--- a/Conferenceware/Localization/ControllerStrings.resx
+++ b/Conferenceware/Localization/ControllerStrings.resx
@@ -116,4 +116,19 @@
 			Error message for when a non-PNG image is uploaded
 		</comment>
 	</data>
+	<data name="TimeSlotController_Error_StartBeforeEnd">
+		<value xml:space="preserve">Start time must be before end time</value>
+	</data>
+	<data name="TimeSlotController_Error_StartBeforeConferenceStart">
+		<value xml:space="preserve">Start time cannot be before conference starts (can change in settings)</value>
+		<comment>
+			Error for when timeslot start time is before conference start time and is not allowed
+		</comment>
+	</data>
+	<data name="TimeSlotController_Error_EndAfterConferenceEnd">
+		<value xml:space="preserve">End time cannot occur after conference end (can change in settings)</value>
+		<comment>
+			Error for when timeslot end time is after conference end time
+		</comment>
+	</data>
 </root>
